# medak

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude/: settings.json
.claude/skills/vertex-ai/: SKILL.md  function-calling.md  live-api.md  multimodal.md  quick-reference.md  structured-output.md
.github/workflows/: deploy-frontend.yml
backend/: Dockerfile  audio_bridge.py  config.py  debug_tracer.py  demo_dashboard.html  demo_dispatch.py  demo_dispatch_agent.py  demo_user_agent.py  dispatch_agent.py  e2e_image_test.py  livedemo_briefs.py  main.py  orchestrator.py  pyproject.toml  snapshot.py  test_gemini_connectivity.py  user_agent.py
backend/tests/: test_api.py  test_audio_bridge.py  test_config.py  test_dispatch_agent.py  test_integration.py  test_livedemo.py  test_orchestrator.py  test_snapshot.py  test_store.py  test_twilio_endpoint.py  test_twilio_status.py  test_twilio_stream.py  test_twilio_twiml.py  test_unit_comprehensive.py  test_user_agent.py
backend/tests/e2e/: run_e2e.py
docs/: design-document.md
docs/superpowers/plans/: 2026-03-28-audio-bridge.md  2026-03-28-voice-bridge-backend.md
frontend/: Dockerfile  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  alarm.tsx  call.tsx  emergency.tsx  index.tsx  layout.tsx  session.tsx  settings.tsx
frontend/lib/: DangerDetectionContext.tsx  api.ts  audio.ts  camera.ts  config.ts  dangerSettings.ts  location.ts  sosFlow.ts  sse.ts  storage.ts  strings.ts  theme.ts  types.ts  useAppTheme.ts  useDangerDetection.ts  websocket.ts
(+1 files in other folders)
